--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Sep-26 ofte                rev 2429
+        - Several small changes
+	- To speed up waveforms, I have opted not to display errorbars. Huge difference!!
+
 2011-Sep-26 ofte                rev 2428
         - Added some of the GUI look and feel from xtcexplorernew to the old, 
 	 since the new explorer seems might need some more work to finish... if 
