added function to utilities.py and a example for plotting cspad in ipython

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,7 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
-2011-Sep-26 ofte                rev 2435
+2011-Sep-30 ofte                rev 2436
+	- added a function to utilities for making the interactive plot in e.g. ipython
+	  (plot_image())
+2011-Sep-29 ofte                rev 2435
          - small changes, plus ability to use cspad.py to load a numpy array in ipython
 	   and display it with matplotlib. Todo: use utilitiles to make the plot. 
 	
