bugfix in section corner ordering

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Oct-19 ofte                  rev 2528
+          - a fix to the coordinate map, to get the section alignment in. Still missing: 
+	    1) convert to pixel units, 2) make use of coordinate map for plotting.
+	
 2011-Oct-18 ofte                  rev 2528
           - Added cspad coordinate maps, based directly on meterology measurements. 
 
