waveform guis for explorernew is on the way

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Nov-11 ofte                  rev 2624
+        - waveform interface for explorernew is on the way
+	
+2011-Nov-08 ofte  V00-01-12       rev 2606
 2011-Nov-08 ofte                  rev 2605
         - improved utilities.py plotting, for pyana_waveforms mainly, and the way pyana_waveforms 
 	does the plotting. 
