--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Nov-11 ofte                 rev 2657
+        - fix a plotting problem. 
+	- some improvements to xtcexplorernew (waveforms gui)
+	
 2011-Nov-11 ofte V00-01-13       rev 2625
         - some more tuning, and a tag
 	
