--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,11 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Dec-09 ofte                 rev 2697
+        - moved icons to the 'data' directory. 
+	- moved 'calib' to the 'data' directory
+	- fixed some more problems prior to tagging. (will need one more iteration of testing after lunch)
+	
 2011-Dec-08 ofte                 rev 2694
 	- pyana_image is quite a bit reduced / cleaned up, and pyana_cspad.py while 
 	  still there and valid, is becoming obsolete as it is handled as any other image
