--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -12,6 +12,10 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 	
+2012-Jan-26 ofte  Tag V00-01-19        rev 2850
+        - I think I've solved the CSPad calib path issue by using AppUtils.AppDataPath 
+	  will see once this version gets included in a release. 
+	
 2012-Jan-26 ofte  Tag V00-01-18        rev 2829
 	- Added the Timepix to list of camera sources. 
           Todo: add histogram/spectrum of the image (request from XCS)
