--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,11 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+	
+2012-May-10 ofte V00-01-25          rev 3373
+       - added a flag to rotate CSPad with small tilt angles (interpolating the array)
+	 To use, set parameter for pyana_image module: small_tilt = True
+
 2012-May-10 ofte V00-01-24          rev 3368
 	- added example line for image threshold
 	- fixed bug due to xtcscanner change (ndatagrams->nevents)
