--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,9 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2012-May-30 ofte                   rev 3650
+       - reset event counter at beginning of run
+	
 2012-May-29 ofte                   rev 3647
        - added run number to the output file name (image)
        - small bug fixes
