--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,9 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2012-June-22 ofte
+	- Small fixes. 
+	
 2012-June-13 ofte
 	- Fixed a bad bug in image average, which didn't have enought bits to store the sum!
 	
