--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,9 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2012-July-2 ofte   V00-01-32      rev 3970
+        - just the tag
+	
 2012-June-27 ofte
 	- waveforms channel number parameter
 	- waveforms window (region of interest)
