--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2012-July-2 jbarrera   V00-01-33
+	- various psana fixes
+	- added xtcscantest
+
 2012-July-2 ofte   V00-01-32      rev 3970
         - just the tag
 	
