--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2012-July-10 ofte   
+	- waveforms from different devices split into separate modules, to 
+	  enable individual configuration for each device 
+	
 2012-July-10 jbarrera   V00-01-34
 	- more psana fixes
 
