2013-Jan-14 salnikov V00-01-40 	- commented out piece of code which caused picture resizing and 	  redrawing which looked funny with Tk backend

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2013-Jan-14 salnikov V00-01-40
+	- commented out piece of code which caused picture resizing and
+	  redrawing which looked funny with Tk backend 
+
 2012-Dec-13 salnikov V00-01-39
 	- replaced IPShellEmbed with InteractiveShellEmbed
 
